# locallibrary

./: .gitignore  .pre-commit-config.yaml  README.md  proto-gen.sh  pyproject.toml
.github/workflows/: admin-Publish.yaml  admin-QA.yaml  club-QA.yaml  frontend-QA.yaml  frontend-Tests.yaml  proto-gen.yaml
admin/: Dockerfile  README.md  go.mod  go.sum
admin/cmd/api_server/: book.go  errors.go  main.go  routes.go  server.go
admin/internal/grpc/frontend/: book.go  converter.go  frontend.go
admin/internal/json/: json.go
admin/internal/models/: models.go
dev/: README.md  docker-compose.yaml
dev/postgres-initdb/: init-extensions.sh
frontend/: Dockerfile  README.md  pyproject.toml
frontend/src/locallibrary_frontend/: __init__.py  enums.py  grpc_server.py  schemas.py  serializers.py  settings.py  web.py
frontend/src/locallibrary_frontend/db/: __init__.py  books.py  categories.py  exceptions.py  models.py  publisher.py  tokens.py  user.py
frontend/src/locallibrary_frontend/grpc/: __init__.py  serializers.py  server.py
frontend/src/locallibrary_frontend/migrations/: env.py
frontend/src/locallibrary_frontend/migrations/versions/: 0d8edd9951de_add_id_field_to_user.py  46da80faef2c_make_user_names_nullable.py  52dea6bc515f_add_refresh_tokens_table.py  a3e0f769c5e8_set_up_database_models.py
frontend/src/locallibrary_frontend/routes/: auth.py  book.py  dependencies.py  http_errors.py  middleware.py  user.py
frontend/tests/: conftest.py
frontend/tests/db/: test_book.py  test_user.py
frontend/tests/routes/: conftest.py  test_book.py  test_user.py
grpc/golang/frontend/: frontend.pb.go  frontend_grpc.pb.go  go.mod
proto/: frontend.proto
proto/frontend/: frontend.proto
src/locallibrary_frontend_grpc/: frontend_pb2.py  frontend_pb2.pyi  frontend_pb2_grpc.py
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json
ui/src/: App.vue
ui/src/components/: FeaturedBooksComponent.vue  FooterComponent.vue  NavbarComponent.vue  SignupComponent.vue
ui/src/router/: index.ts
ui/src/services/api/: auth.ts  user.ts
ui/src/stores/: auth.ts
ui/src/types/: book.ts  error.ts  link.ts  user.ts
ui/src/utils/: httpRequest.ts
ui/src/views/: AboutView.vue  HomeView.vue  RegisterView.vue
