    [build-system]
    requires = ["setuptools >= 61.0"]
    build-backend = "setuptools.build_meta"

    [project]
    name = "locallibrary_frontend_grpc"
    description = "Locallibrary Frontend Python gRPC stubs"
    requires-python = ">=3.11"
    version = "1.0.0"
    dependencies = [
	"grpcio==1.66.2",
	"protobuf==5.28.2",
    ]
